# feat

./: Cargo.toml  build.rs
legacy/: Cargo.toml
legacy/src/: db.rs  discriminantname.rs  lib.rs  model.rs  tests.rs
legacy/src/cli/: options.rs
legacy/src/cli/options/: dbpath.rs
legacy/src/db/: txn.rs
legacy/src/db/migrations/00-initial-model/: up.sql
legacy/src/db/orm/: ormtype.rs
legacy/src/model/: updatable.rs
memstate/: Cargo.toml
memstate/src/: lib.rs  memstate.rs  tests.rs
model/: Cargo.toml
model/src/: action.rs  lib.rs  state.rs  test.rs  testutil.rs  unique.rs  updatable.rs
model/src/state/: mem.rs  task.rs
src/: cli.rs  db.rs  lib.rs  logging.rs  model.rs  tests.rs
src/cli/: options.rs  run.rs  runwithdb.rs
src/cli/options/: cli2db.rs  dbpath.rs
src/db/: coldef.rs  orm.rs  txn.rs
src/model/: action.rs  actions.rs  updatable.rs
