[package]
name = "feat"
version = "0.1.0"
description = "local-first cli task tracking"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
anyhow-std = "0.1.4"
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
error-report = "0.0.1"
include_dir = "0.7.3"
log = "0.4.21"
rusqlite = { version = "0.31.0", features = ["bundled"] }
rusqlite_migration = { version = "1.2.0", features = ["from-directory"] }
simplelog = "0.12.2"

[dev-dependencies]
test-case = "3.3.1"
