[workspace]
resolver = "2"
members = [
  "legacy",
  "memstate",
  "model",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.82"
anyhow-std = "0.1.4"
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.11.3"
error-report = "0.0.1"
feat-model = { path = "model" }
include_dir = "0.7.3"
indoc = "2.0.5"
log = "0.4.21"
name-variant = "0.1.0"
rand = "0.8.5"
rusqlite_migration = { version = "1.2.0", features = ["from-directory"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
tempfile = "3.10.1"
test-case = "3.3.1"
